implement transparent reverse proxy in proxy service

--- a/.env
+++ b/.env
@@ -6,6 +6,10 @@ IMAGE_NAME=kava-labs/kava-proxy-service
 LOCAL_IMAGE_TAG=local
 PRODUCTION_IMAGE_TAG=latest
 
+# Values used by docker
+# what version of kava is installed in the development version of the proxy service image
+PROXY_KAVA_CLI_VERSION=v0.21.0
+
 # Values used by docker-compose
 POSTGRES_CONTAINER_PORT=5432
 POSTGRES_HOST_PORT=5432
@@ -27,7 +31,11 @@ PROXY_HOST_DEBUG_PORT=2345
 
 
 ##### Kava Proxy Config
+# What port the proxy service listens on
+PROXY_SERVICE_PORT=7777
 LOG_LEVEL=DEBUG
+# Address of the origin server to proxy all requests to
+PROXY_BACKEND_HOST_URL=http://kava:26657
 
 
 ##### Database Config
