add e2e test that proxy service handles eth_getBlockByNumber RPC calls

--- a/.env
+++ b/.env
@@ -27,6 +27,10 @@ PROXY_HOST_PORT=7777
 PROXY_CONTAINER_DEBUG_PORT=2345
 PROXY_HOST_DEBUG_PORT=2345
 
+##### E2E Testing Config
+TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
+
+
 ##### Kava Node Config
 
 
@@ -35,7 +39,7 @@ PROXY_HOST_DEBUG_PORT=2345
 PROXY_SERVICE_PORT=7777
 LOG_LEVEL=DEBUG
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL=http://kava:26657
+PROXY_BACKEND_HOST_URL=http://kava:8545
 
 
 ##### Database Config
