add basic unit tests for config and service packages

--- a/.env
+++ b/.env
@@ -29,6 +29,7 @@ PROXY_HOST_DEBUG_PORT=2345
 
 ##### E2E Testing Config
 TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
+TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 
 
 ##### Kava Node Config
