--- a/.env
+++ b/.env
@@ -41,6 +41,13 @@ PROXY_SERVICE_PORT=7777
 LOG_LEVEL=DEBUG
 # Address of the origin server to proxy all requests to
 PROXY_BACKEND_HOST_URL=http://kava:8545
+# Configuration for the servcie to connect to it's database
+DATABASE_NAME=postgres
+DATABASE_ENDPOINT_URL=postgres:5432
+DATABASE_USERNAME=postgres
+DATABASE_PASSWORD=password
+DATABASE_SSL_ENABLED=false
+DATABASE_QUERY_LOGGING_ENABLED=true
 
 
 ##### Database Config
