🎉 incorporate pr feedback from nick and pirtle

--- a/.env
+++ b/.env
@@ -47,6 +47,8 @@ DATABASE_ENDPOINT_URL=postgres:5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
 DATABASE_SSL_ENABLED=false
+# controls whether the service will attempt to run migrations when it starts
+RUN_DATABASE_MIGRATIONS=true
 DATABASE_QUERY_LOGGING_ENABLED=true
 
 
