add e2e test that a valid request metric is created for each request

--- a/.env
+++ b/.env
@@ -30,6 +30,7 @@ PROXY_HOST_DEBUG_PORT=2345
 ##### E2E Testing Config
 TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
+TEST_DATABASE_ENDPOINT_URL=localhost:5432
 
 
 ##### Kava Node Config
