add health check endpoint and other first time deployment operational updates

--- a/.env
+++ b/.env
@@ -40,6 +40,8 @@ TEST_DATABASE_ENDPOINT_URL=localhost:5432
 # What port the proxy service listens on
 PROXY_SERVICE_PORT=7777
 LOG_LEVEL=DEBUG
+HTTP_READ_TIMEOUT_SECONDS=30
+HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
 PROXY_BACKEND_HOST_URL=http://kava:8545
 # Configuration for the servcie to connect to it's database
