--- a/.env
+++ b/.env
@@ -23,15 +23,20 @@ KAVA_CONTAINER_COSMOS_RPC_PORT=26657
 KAVA_HOST_COSMOS_RPC_PORT=26657
 
 PROXY_CONTAINER_PORT=7777
+PROXY_CONTAINER_EVM_RPC_DATA_PORT=7778
 PROXY_HOST_PORT=7777
 PROXY_CONTAINER_DEBUG_PORT=2345
 PROXY_HOST_DEBUG_PORT=2345
 
 ##### E2E Testing Config
 TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
+TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>http://kava:8545
+# What level of logging to use for servcie objects constructed during
+# unit tests
+TEST_SERVICE_LOG_LEVEL=ERROR
 
 ##### Kava Node Config
 
@@ -43,7 +48,7 @@ LOG_LEVEL=DEBUG
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL=http://kava:8545
+PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>http://kava:8545
 # Configuration for the servcie to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
