--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -7,7 +7,7 @@ on:
       - 'releases/**'
 # run default ci checks against current PR
 jobs:
-  # default:
-  #   uses: ./.github/workflows/ci-default.yml
+  default:
+    uses: ./.github/workflows/ci-default.yml
   e2e-tests:
     uses: ./.github/workflows/ci-e2e-tests.yml
