--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -15,3 +15,10 @@ jobs:
   e2e-tests:
     needs: [lint-checks, default-checks]
     uses: ./.github/workflows/ci-e2e-tests.yml
+  # build, tag and publish new service docker images
+  release-docker-images:
+      needs: [e2e-tests]
+      uses: ./.github/workflows/ci-docker-release.yml
+      with:
+        dockerhub-username: kavaops
+      secrets: inherit
