feat: add no-op metric compaction routine that runs on configurable interval

--- a/.env
+++ b/.env
@@ -59,7 +59,9 @@ DATABASE_SSL_ENABLED=false
 # controls whether the service will attempt to run migrations when it starts
 RUN_DATABASE_MIGRATIONS=true
 DATABASE_QUERY_LOGGING_ENABLED=true
-
+# How often the metric compaction routine will run
+# defaults to 3600 / 1 hour if not set
+METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
 
 ##### Database Config
 POSTGRES_PASSWORD=password
