feat: add support for and use trace log level where warranted - add unique per metric compaction routine

--- a/.env
+++ b/.env
@@ -45,7 +45,7 @@ TEST_SERVICE_LOG_LEVEL=ERROR
 ##### Kava Proxy Config
 # What port the proxy service listens on
 PROXY_SERVICE_PORT=7777
-LOG_LEVEL=DEBUG
+LOG_LEVEL=TRACE
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
