add ability for proxy service to query an evm api

--- a/.env
+++ b/.env
@@ -35,9 +35,12 @@ TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
 TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>http://kava:8545
-# What level of logging to use for servcie objects constructed during
+# What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
+# endpoint the proxy service should look up for querying
+# information related to proxied requests
+TEST_EVM_QUERY_SERVICE_URL=http://kava:8545
 
 ##### Kava Node Config
 
@@ -62,6 +65,9 @@ DATABASE_QUERY_LOGGING_ENABLED=true
 # How often the metric compaction routine will run
 # defaults to 3600 / 1 hour if not set
 METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
+# endpoint the proxy service should look up for querying
+# information related to proxied requests
+EVM_QUERY_SERVICE_URL=http://kava:8545
 
 ##### Database Config
 POSTGRES_PASSWORD=password
