--- a/.env
+++ b/.env
@@ -38,8 +38,8 @@ TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>h
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
-# endpoint the proxy service should look up for querying
-# information related to proxied requests
+# endpoint the proxy service should use for querying
+# evm blockchain information related to proxied requests
 TEST_EVM_QUERY_SERVICE_URL=http://kava:8545
 
 ##### Kava Node Config
@@ -65,8 +65,8 @@ DATABASE_QUERY_LOGGING_ENABLED=true
 # How often the metric compaction routine will run
 # defaults to 3600 / 1 hour if not set
 METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
-# endpoint the proxy service should look up for querying
-# information related to proxied requests
+# endpoint the proxy service should use for querying
+# evm blockchain information related to proxied requests
 EVM_QUERY_SERVICE_URL=http://kava:8545
 
 ##### Database Config
