feat: add ability to config postgres connection limit

--- a/.env
+++ b/.env
@@ -59,6 +59,9 @@ DATABASE_ENDPOINT_URL=postgres:5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
 DATABASE_SSL_ENABLED=false
+DATABASE_MAX_IDLE_CONNECTIONS=20
+DATABASE_CONNECTION_MAX_IDLE_SECONDS=5
+DATABASE_MAX_OPEN_CONNECTIONS=100
 # controls whether the service will attempt to run migrations when it starts
 RUN_DATABASE_MIGRATIONS=true
 DATABASE_QUERY_LOGGING_ENABLED=true
