Initial cache middleware

--- a/.env
+++ b/.env
@@ -72,6 +72,10 @@ METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
 # evm blockchain information related to proxied requests
 EVM_QUERY_SERVICE_URL=http://kava:8545
 
+REDIS_ENDPOINT_URL=redis:6379
+REDIS_USERNAME=
+REDIS_PASSWORD=
+
 ##### Database Config
 POSTGRES_PASSWORD=password
 
