--- a/.env
+++ b/.env
@@ -59,6 +59,7 @@ DATABASE_ENDPOINT_URL=postgres:5432
 DATABASE_USERNAME=postgres
 DATABASE_PASSWORD=password
 DATABASE_SSL_ENABLED=false
+DATABASE_READ_TIMEOUT_SECONDS=60
 DATABASE_MAX_IDLE_CONNECTIONS=20
 DATABASE_CONNECTION_MAX_IDLE_SECONDS=5
 DATABASE_MAX_OPEN_CONNECTIONS=100
