add ability to enable or disable metric collection

--- a/.env
+++ b/.env
@@ -72,6 +72,9 @@ METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
 # endpoint the proxy service should use for querying
 # evm blockchain information related to proxied requests
 EVM_QUERY_SERVICE_URL=http://kava:8545
+# Whether the proxy service should attempt to track and store metrics
+# related to proxied requests
+METRIC_COLLECTION_ENABLED=true
 
 ##### Database Config
 POSTGRES_PASSWORD=password
