add config and no-op metric partitioning routine

--- a/.env
+++ b/.env
@@ -75,6 +75,13 @@ EVM_QUERY_SERVICE_URL=http://kava:8545
 # Whether the proxy service should attempt to track and store metrics
 # related to proxied requests
 METRIC_COLLECTION_ENABLED=true
+# How often the metric partitioning routine will run
+# defaults to 86400 / 24 hours if not set
+METRIC_PARTITIONING_ROUTINE_INTERVAL_SECONDS=1
+# How many days (starting from the time the routine runs)
+# of partions should be created (idempotently)
+# defaults 7 days / 1 week if not set
+METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 
 ##### Database Config
 POSTGRES_PASSWORD=password
