restrict metric partitioning prefill period

--- a/.env
+++ b/.env
@@ -80,7 +80,8 @@ METRIC_COLLECTION_ENABLED=true
 METRIC_PARTITIONING_ROUTINE_INTERVAL_SECONDS=1
 # How many days (starting from the time the routine runs)
 # of partions should be created (idempotently)
-# defaults 7 days / 1 week if not set
+# defaults to 7 days / 1 week if not set,
+# max value of 28, min value of 1
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 
 ##### Database Config
