support separate time intervals for first and each iteration of metric partitioning routine

--- a/.env
+++ b/.env
@@ -78,7 +78,10 @@ EVM_QUERY_SERVICE_URL=http://kava:8545
 METRIC_COLLECTION_ENABLED=true
 # How often the metric partitioning routine will run
 # defaults to 86400 / 24 hours if not set
-METRIC_PARTITIONING_ROUTINE_INTERVAL_SECONDS=1
+METRIC_PARTITIONING_ROUTINE_INTERVAL_SECONDS=60
+# how long (after the proxy service starts) it will wait
+# to run the first iteration of the metric partitioning routine
+METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 # How many days (starting from the time the routine runs)
 # of partions should be created (idempotently)
 # defaults to 7 days / 1 week if not set,
