no-op comment change to force ci to run

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 ##### Local development config
 
-# Values used by `make`
+# Values used by make
 CONTAINER_NAME=kava-proxy-service
 IMAGE_NAME=kava-labs/kava-proxy-service
 LOCAL_IMAGE_TAG=local
