--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ kava-proxy-service
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+# coverage report converted to HTML
+cover.html
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
