--- a/.github/workflows/ci-e2e-tests.yml
+++ b/.github/workflows/ci-e2e-tests.yml
@@ -29,6 +29,12 @@ jobs:
         run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-running.sh
         env:
             PROXY_CONTAINER_PORT: 7777
+      - name: wait for proxy service metric partitions database tables to be created
+        run: bash ${GITHUB_WORKSPACE}/scripts/wait-for-proxy-service-database-metric-partitions.sh
+        env:
+            # needs to be 1 + number of partitions created by /clients/database/migrations/20230523101344_partition_proxied_request_metrics_table.up.sql
+            MINIMUM_REQUIRED_PARTITIONS: 30
+            PROXY_CONTAINER_PORT: 7777
       - name: run e2e tests
         run: make e2e-test
       - name: print proxy service logs
