update & increase resliency of e2e tests

--- a/.env
+++ b/.env
@@ -87,6 +87,8 @@ METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 # defaults to 7 days / 1 week if not set,
 # max value of 28, min value of 1
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
+# Used by `ready` script to ensure metric partitions have been created.
+MINIMUM_REQUIRED_PARTITIONS=30
 
 ##### Database Config
 POSTGRES_PASSWORD=password
