--- a/.env
+++ b/.env
@@ -18,9 +18,10 @@ REDIS_CONTAINER_PORT=6379
 REDIS_HOST_PORT=6379
 
 KAVA_CONTAINER_EVM_RPC_PORT=8545
-KAVA_HOST_EVM_RPC_PORT=8545
 KAVA_CONTAINER_COSMOS_RPC_PORT=26657
-KAVA_HOST_COSMOS_RPC_PORT=26657
+
+KAVA_PRUNING_HOST_EVM_RPC_PORT=8545
+KAVA_PRUNING_HOST_COSMOS_RPC_PORT=26657
 
 PROXY_CONTAINER_PORT=7777
 PROXY_CONTAINER_EVM_RPC_DATA_PORT=7778
@@ -34,13 +35,13 @@ TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>http://kava:8545
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kavapruning:8545,localhost:7778>http://kavapruning:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
 # endpoint the proxy service should use for querying
 # evm blockchain information related to proxied requests
-TEST_EVM_QUERY_SERVICE_URL=http://kava:8545
+TEST_EVM_QUERY_SERVICE_URL=http://kavapruning:8545
 
 ##### Kava Node Config
 
@@ -52,7 +53,7 @@ LOG_LEVEL=TRACE
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava:8545,localhost:7778>http://kava:8545
+PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kavapruning:8545,localhost:7778>http://kavapruning:8545
 # Configuration for the servcie to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
@@ -69,10 +70,10 @@ RUN_DATABASE_MIGRATIONS=true
 DATABASE_QUERY_LOGGING_ENABLED=true
 # How often the metric compaction routine will run
 # defaults to 3600 / 1 hour if not set
-METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
+METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=60
 # endpoint the proxy service should use for querying
 # evm blockchain information related to proxied requests
-EVM_QUERY_SERVICE_URL=http://kava:8545
+EVM_QUERY_SERVICE_URL=http://kavapruning:8545
 # Whether the proxy service should attempt to track and store metrics
 # related to proxied requests
 METRIC_COLLECTION_ENABLED=true
