making blocks w/ 2 validators

--- a/.env
+++ b/.env
@@ -17,9 +17,12 @@ POSTGRES_HOST_PORT=5432
 REDIS_CONTAINER_PORT=6379
 REDIS_HOST_PORT=6379
 
+KAVA_CONTAINER_TAG=v0.24.0
 KAVA_CONTAINER_EVM_RPC_PORT=8545
 KAVA_CONTAINER_COSMOS_RPC_PORT=26657
 
+KAVA_ARCHIVE_HOST_EVM_RPC_PORT=8555
+KAVA_ARCHIVE_HOST_COSMOS_RPC_PORT=26667
 KAVA_PRUNING_HOST_EVM_RPC_PORT=8545
 KAVA_PRUNING_HOST_COSMOS_RPC_PORT=26657
 
@@ -35,7 +38,7 @@ TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kavapruning:8545,localhost:7778>http://kavapruning:8545
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kavapruning:8545,localhost:7778>http://kavaarchive:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
