--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,12 @@ services:
     expose:
       - "${REDIS_CONTAINER_PORT}"
   # run single validator kava node to provide a local kava network for development and testing of the proxy service
-  kava:
+  kava-validator:
     image: kava/kava:latest
-    entrypoint: /docker/kava/kava-entrypoint.sh
+    entrypoint: /docker/kava/kava-validator-entrypoint.sh
     env_file: .env
     volumes:
-      - ./docker/kava:/docker/kava
+      - ./docker/kava-validator:/docker/kava
     ports:
       - "${KAVA_HOST_COSMOS_RPC_PORT}:${KAVA_CONTAINER_COSMOS_RPC_PORT}"
       - "${KAVA_HOST_EVM_RPC_PORT}:${KAVA_CONTAINER_EVM_RPC_PORT}"
