add peer api node alongside validator

--- a/.env
+++ b/.env
@@ -17,10 +17,14 @@ POSTGRES_HOST_PORT=5432
 REDIS_CONTAINER_PORT=6379
 REDIS_HOST_PORT=6379
 
+KAVA_CONTAINER_TAG=v0.24.0
 KAVA_CONTAINER_EVM_RPC_PORT=8545
-KAVA_HOST_EVM_RPC_PORT=8545
 KAVA_CONTAINER_COSMOS_RPC_PORT=26657
+
+KAVA_HOST_EVM_RPC_PORT=8545
 KAVA_HOST_COSMOS_RPC_PORT=26657
+KAVA_PRUNING_HOST_EVM_RPC_PORT=8555
+KAVA_PRUNING_HOST_COSMOS_RPC_PORT=26667
 
 PROXY_CONTAINER_PORT=7777
 PROXY_CONTAINER_EVM_RPC_DATA_PORT=7778
@@ -34,7 +38,7 @@ TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-validator:8545
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kavapruning:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
@@ -52,7 +56,7 @@ LOG_LEVEL=TRACE
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-validator:8545
+PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kavapruning:8545
 # Configuration for the servcie to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
