add pruning vs archive node sharding (#42)
* add height-based routing options to config

PROXY_HEIGHT_BASED_ROUTING_ENABLED enables the feature
PROXY_PRUNING_BACKEND_HOST_URL_MAP is the map to pruning cluster hosts

* add HeightShardingProxies for height-based routing

the Proxies instance parses the block height out of the request.
if the request is made for the latest block height, the request is routed
to the defined pruning cluster. otherwise the default cluster is used.

* support & handle routing always-latest methods

some methods will always work if routed to a pruning cluster. do that!

* handle routing block tags to pruning cluster

* refactor & rename NoHistoryMethods

* refactor method param type checks to pure functions

* add eth_blockNumber to no-history methods

* add unit tests for HeightShardingProxies

* add proxy routing documentation

* add ErrEmptyHostMap to allow handling of that error

* allow empty pruning host map

* ensure pruning host map are all in default host map

* rename "data" test client to "pruning"

* add named ResponseBackend concept to Proxies

* add ResponseBackend to proxied_request_metrics

* use HeaderByHash for fewer queries

* add e2e tests for HeightBasedRouting

* fix proxy test for expected routes

* rename PROXY_CONTAINER_EVM_RPC_DATA_PORT -> PRUNING

* update CI e2e test configuration

* add more sharding proxy docs & docs on metrics

* add ci-setup w/ docs for local CI testnet test runs

* more docs context

* reorganize proxy code into shard.go

* track actual url the requests are routed to

--- a/.env
+++ b/.env
@@ -27,7 +27,7 @@ KAVA_PRUNING_HOST_EVM_RPC_PORT=8555
 KAVA_PRUNING_HOST_COSMOS_RPC_PORT=26667
 
 PROXY_CONTAINER_PORT=7777
-PROXY_CONTAINER_EVM_RPC_DATA_PORT=7778
+PROXY_CONTAINER_EVM_RPC_PRUNING_PORT=7778
 PROXY_HOST_PORT=7777
 PROXY_CONTAINER_DEBUG_PORT=2345
 PROXY_HOST_DEBUG_PORT=2345
@@ -35,10 +35,12 @@ PROXY_HOST_DEBUG_PORT=2345
 ##### E2E Testing Config
 TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
-TEST_PROXY_SERVICE_EVM_RPC_DATA_URL=http://localhost:7778
+TEST_PROXY_SERVICE_EVM_RPC_PRUNING_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
 TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
+TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
 # What level of logging to use for service objects constructed during
 # unit tests
 TEST_SERVICE_LOG_LEVEL=ERROR
@@ -57,6 +59,11 @@ HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
 PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+# height-based routing will look at the height of an incoming EVM request
+# iff. the height is "latest", it routes to the corresponding PROXY_PRUNING_BACKEND_HOST_URL_MAP value
+# otherwise, it falls back to the value in PROXY_BACKEND_HOST_URL_MAP
+PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
+PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
 # Configuration for the servcie to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
