--- a/.env
+++ b/.env
@@ -89,9 +89,17 @@ METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 # Used by `ready` script to ensure metric partitions have been created.
 MINIMUM_REQUIRED_PARTITIONS=30
+# RedisEndpointURL is an url of redis
 REDIS_ENDPOINT_URL=redis:6379
 REDIS_PASSWORD=
-CHAIN_ID=local-chain
+# TTL for cached evm requests
+# TTL should be specified in seconds
+CACHE_TTL=600
+# CachePrefix is used as prefix for any key in the cache, key has such structure:
+# <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
+# Possible values are testnet, mainnet, etc...
+# CachePrefix must not contain colon symbol
+CACHE_PREFIX=local-chain
 
 ##### Database Config
 POSTGRES_PASSWORD=password
