Add is_cache_enabled boolean flag

--- a/.env
+++ b/.env
@@ -89,16 +89,18 @@ METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 # Used by `ready` script to ensure metric partitions have been created.
 MINIMUM_REQUIRED_PARTITIONS=30
-# RedisEndpointURL is an url of redis
+# CACHE_ENABLED specifies if cache should be enabled. By default cache is disabled.
+CACHE_ENABLED=true
+# REDIS_ENDPOINT_URL is an url of redis
 REDIS_ENDPOINT_URL=redis:6379
 REDIS_PASSWORD=
-# TTL for cached evm requests
-# TTL should be specified in seconds
+# CACHE_TTL is a TTL for cached evm requests
+# CACHE_TTL should be specified in seconds
 CACHE_TTL=600
-# CachePrefix is used as prefix for any key in the cache, key has such structure:
+# CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
-# CachePrefix must not contain colon symbol
+# CACHE_PREFIX must not contain colon symbol
 CACHE_PREFIX=local-chain
 
 ##### Database Config
