--- a/.env
+++ b/.env
@@ -41,6 +41,8 @@ TEST_SERVICE_LOG_LEVEL=ERROR
 # endpoint the proxy service should use for querying
 # evm blockchain information related to proxied requests
 TEST_EVM_QUERY_SERVICE_URL=http://kava:8545
+# TEST_REDIS_ENDPOINT_URL is an url of redis
+TEST_REDIS_ENDPOINT_URL=localhost:6379
 
 ##### Kava Node Config
 
