--- a/.env
+++ b/.env
@@ -107,9 +107,9 @@ CACHE_ENABLED=true
 # REDIS_ENDPOINT_URL is an url of redis
 REDIS_ENDPOINT_URL=redis:6379
 REDIS_PASSWORD=
-# CACHE_TTL is a TTL for cached evm requests
-# CACHE_TTL should be specified in seconds
-CACHE_TTL=600
+# CACHE_TTL_SECONDS is a TTL for cached evm requests
+# CACHE_TTL_SECONDS should be specified in seconds
+CACHE_TTL_SECONDS=600
 # CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
