Basic implementation of Caching Middleware (#39)
* Basic implementation of Caching Middleware

* Minor fix

* Added comments

* Update CACHING.md

* Update CACHING.md

* Update CACHING.md

* Add response parser

* Integrate response parser and adjust tests accordingly

* Fix tests

* Improve tests

* CR's fixes

* CR's fixes

* Change Key Structure

* Update CACHING.md

* Rename ChainID -> CachePrefix and add validation

* Add is_cache_enabled boolean flag

* Added test for cache disabled scenario

* CR's fixes

* Improve tests

* Update healthcheck

* CR's fixes

* CR's fixes: improve logging

* Fixes after merge

* Improve IsCacheable method

* Improve logging

* CR's fixes

* Fix JSON-RPC response's ID flow

* Remove deprecated TODO

* Small fix

--- a/.env
+++ b/.env
@@ -47,6 +47,8 @@ TEST_SERVICE_LOG_LEVEL=ERROR
 # endpoint the proxy service should use for querying
 # evm blockchain information related to proxied requests
 TEST_EVM_QUERY_SERVICE_URL=http://kava-validator:8545
+# TEST_REDIS_ENDPOINT_URL is an url of redis
+TEST_REDIS_ENDPOINT_URL=localhost:6379
 
 ##### Kava Node Config
 
@@ -100,6 +102,19 @@ METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 # Used by `ready` script to ensure metric partitions have been created.
 MINIMUM_REQUIRED_PARTITIONS=30
+# CACHE_ENABLED specifies if cache should be enabled. By default cache is disabled.
+CACHE_ENABLED=true
+# REDIS_ENDPOINT_URL is an url of redis
+REDIS_ENDPOINT_URL=redis:6379
+REDIS_PASSWORD=
+# CACHE_TTL_SECONDS is a TTL for cached evm requests
+# CACHE_TTL_SECONDS should be specified in seconds
+CACHE_TTL_SECONDS=600
+# CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
+# <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
+# Possible values are testnet, mainnet, etc...
+# CACHE_PREFIX must not contain colon symbol
+CACHE_PREFIX=local-chain
 
 ##### Database Config
 POSTGRES_PASSWORD=password
