--- a/.gitignore
+++ b/.gitignore
@@ -17,10 +17,11 @@ kava-proxy-service
 cover.html
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # ignore editor files
 .vscode/
+.idea/
 
 # ignore e2e test validator files
 docker/shared/genesis.json
