add config and routine init logic for metric pruning

--- a/.env
+++ b/.env
@@ -102,6 +102,20 @@ METRIC_PARTITIONING_ROUTINE_DELAY_FIRST_RUN_SECONDS=10
 METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 # Used by `ready` script to ensure metric partitions have been created.
 MINIMUM_REQUIRED_PARTITIONS=30
+# Whether metric pruning routines should run on the configured interval, defaults to true
+METRIC_PRUNING_ENABLED=true
+# How frequenlty metric pruning routines should run
+# defaults to 1 day
+METRIC_PRUNING_ROUTINE_INTERVAL_SECONDS=10
+# how long (after the proxy service starts) it will wait
+# to run the first iteration of the metric pruning routine
+METRIC_PRUNING_ROUTINE_DELAY_FIRST_RUN_SECONDS=5
+# The maximum number of days of request metrics that should
+# be preserved starting from
+# the end of the current day each time
+# the pruning routine runs
+# all metrics for earlier days will be truncated
+METRIC_PRUNING_MAX_REQUEST_METRICS_HISTORY_DAYS=1
 # CACHE_ENABLED specifies if cache should be enabled. By default cache is disabled.
 CACHE_ENABLED=true
 # REDIS_ENDPOINT_URL is an url of redis
