Added cache indefinitely boolean flag

--- a/.env
+++ b/.env
@@ -110,6 +110,9 @@ REDIS_PASSWORD=
 # CACHE_TTL_SECONDS is a TTL for cached evm requests
 # CACHE_TTL_SECONDS should be specified in seconds
 CACHE_TTL_SECONDS=600
+# CACHE_INDEFINITELY overrides CACHE_TTL_SECONDS and sets TTL to infinity
+# if CACHE_INDEFINITELY set to true, CACHE_TTL_SECONDS should be zero
+CACHE_INDEFINITELY=false
 # CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
