--- a/.env
+++ b/.env
@@ -110,12 +110,11 @@ METRIC_PRUNING_ROUTINE_INTERVAL_SECONDS=10
 # how long (after the proxy service starts) it will wait
 # to run the first iteration of the metric pruning routine
 METRIC_PRUNING_ROUTINE_DELAY_FIRST_RUN_SECONDS=5
-# The maximum number of days of request metrics that should
-# be preserved starting from
-# the end of the current day each time
-# the pruning routine runs
+# The maximum number of days of request metrics
+# that should be preserved measured
+# from the time the pruning routine runs
 # all metrics for earlier days will be truncated
-METRIC_PRUNING_MAX_REQUEST_METRICS_HISTORY_DAYS=1
+METRIC_PRUNING_MAX_REQUEST_METRICS_HISTORY_DAYS=45
 # CACHE_ENABLED specifies if cache should be enabled. By default cache is disabled.
 CACHE_ENABLED=true
 # REDIS_ENDPOINT_URL is an url of redis
