Cache response headers along with json-rpc response

--- a/.env
+++ b/.env
@@ -131,6 +131,8 @@ CACHE_INDEFINITELY=false
 # Possible values are testnet, mainnet, etc...
 # CACHE_PREFIX must not contain colon symbol
 CACHE_PREFIX=local-chain
+# WHITELISTED_HEADERS contains comma-separated list of headers which has to be cached along with EVM JSON-RPC response
+WHITELISTED_HEADERS=access-control-expose-headers,server,vary
 
 ##### Database Config
 POSTGRES_PASSWORD=password
