Whitelist default CORS headers

--- a/.env
+++ b/.env
@@ -132,7 +132,7 @@ CACHE_INDEFINITELY=false
 # CACHE_PREFIX must not contain colon symbol
 CACHE_PREFIX=local-chain
 # WHITELISTED_HEADERS contains comma-separated list of headers which has to be cached along with EVM JSON-RPC response
-WHITELISTED_HEADERS=access-control-expose-headers,server,vary
+WHITELISTED_HEADERS=Server,Vary,Access-Control-Expose-Headers,Access-Control-Allow-Origin,Access-Control-Allow-Methods,Access-Control-Allow-Headers,Access-Control-Allow-Credentials,Access-Control-Max-Age
 
 ##### Database Config
 POSTGRES_PASSWORD=password
