Change TTL config structure

--- a/.env
+++ b/.env
@@ -120,20 +120,13 @@ CACHE_ENABLED=true
 # REDIS_ENDPOINT_URL is an url of redis
 REDIS_ENDPOINT_URL=redis:6379
 REDIS_PASSWORD=
-# CACHE_TTL_SECONDS is a TTL for cached evm requests
-# CACHE_TTL_SECONDS should be specified in seconds
-# NOTE: as of now CACHE_TTL_SECONDS serves as a default fallback value, for more granular control use variables below
-CACHE_TTL_SECONDS=600
-CACHE_METHOD_HAS_BLOCK_NUMBER_PARAM_TTL=600
-CACHE_METHOD_HAS_BLOCK_HASH_PARAM_TTL=600
-CACHE_STATIC_METHOD_TTL=600
-# CACHE_INDEFINITELY overrides CACHE_TTL_SECONDS and sets TTL to infinity
-# if CACHE_INDEFINITELY set to true, CACHE_TTL_SECONDS should be zero
-# NOTE: as of now CACHE_INDEFINITELY serves as a default fallback value, for more granular control use variables below
-CACHE_INDEFINITELY=false
-CACHE_METHOD_HAS_BLOCK_NUMBER_PARAM_INDEFINITELY=false
-CACHE_METHOD_HAS_BLOCK_HASH_PARAM_INDEFINITELY=false
-CACHE_STATIC_METHOD_INDEFINITELY=false
+# CACHE_<group-name>_TTL_SECONDS is a TTL for cached evm requests
+# CACHE_<group-name>_TTL_SECONDS should be specified in seconds
+# <group-name> refers to group of evm methods, different groups may have different TTLs
+# CACHE_<group-name>_TTL_SECONDS should be either greater than zero or equal to -1, -1 means cache indefinitely
+CACHE_METHOD_HAS_BLOCK_NUMBER_PARAM_TTL_SECONDS=600
+CACHE_METHOD_HAS_BLOCK_HASH_PARAM_TTL_SECONDS=600
+CACHE_STATIC_METHOD_TTL_SECONDS=600
 # CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
