--- a/.github/workflows/ci-e2e-tests.yml
+++ b/.github/workflows/ci-e2e-tests.yml
@@ -19,8 +19,9 @@ jobs:
       # In this step, this action saves a list of existing images,
       # the cache is created without them in the post run.
       # It also restores the cache if it exists.
-      - name: cache docker images
-        uses: satackey/action-docker-layer-caching@v0.0.11
+      # TODO(yevhenii): this step failed with "No space left on device" error, debug it and enable back
+      # - name: cache docker images
+      #   uses: satackey/action-docker-layer-caching@v0.0.11
         # Ignore the failure of a step and avoid terminating the job.
         continue-on-error: true
       - name: build and start proxy service and it's dependencies
