Implementation of cacheable by tx hash methods

--- a/.env
+++ b/.env
@@ -127,6 +127,7 @@ REDIS_PASSWORD=
 CACHE_METHOD_HAS_BLOCK_NUMBER_PARAM_TTL_SECONDS=600
 CACHE_METHOD_HAS_BLOCK_HASH_PARAM_TTL_SECONDS=600
 CACHE_STATIC_METHOD_TTL_SECONDS=600
+CACHE_METHOD_HAS_TX_HASH_PARAM_TTL_SECONDS=600
 # CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
