Implement caching for cacheable for short time methods

--- a/.env
+++ b/.env
@@ -128,6 +128,7 @@ CACHE_METHOD_HAS_BLOCK_NUMBER_PARAM_TTL_SECONDS=600
 CACHE_METHOD_HAS_BLOCK_HASH_PARAM_TTL_SECONDS=600
 CACHE_STATIC_METHOD_TTL_SECONDS=600
 CACHE_METHOD_HAS_TX_HASH_PARAM_TTL_SECONDS=600
+CACHE_METHOD_CACHEABLE_FOR_SHORT_TIME_TTL_SECONDS=2
 # CACHE_PREFIX is used as prefix for any key in the cache, key has such structure:
 # <cache_prefix>:evm-request:<method_name>:sha256:<sha256(body)>
 # Possible values are testnet, mainnet, etc...
