Inherit secrets for trigger-webapp-e2e-tests job

--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -26,3 +26,4 @@ jobs:
   trigger-webapp-e2e-tests:
     needs: [ release-docker-images ]
     uses: ./.github/workflows/ci-webapp-e2e-tests.yml
+    secrets: inherit
