--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -23,7 +23,7 @@ jobs:
         dockerhub-username: kavaops
       secrets: inherit
   # trigger webapp e2e tests against just redeployed internal-testnet
-  trigger-webapp-e2e-tests:
-    needs: [ release-docker-images ]
-    uses: ./.github/workflows/ci-webapp-e2e-tests.yml
-    secrets: inherit
+#  trigger-webapp-e2e-tests:
+#    needs: [ release-docker-images ]
+#    uses: ./.github/workflows/ci-webapp-e2e-tests.yml
+#    secrets: inherit
