set new .env for sharded nodes

--- a/.env
+++ b/.env
@@ -52,7 +52,6 @@ TEST_REDIS_ENDPOINT_URL=localhost:6379
 
 ##### Kava Node Config
 
-
 ##### Kava Proxy Config
 # What port the proxy service listens on
 PROXY_SERVICE_PORT=7777
@@ -66,7 +65,11 @@ PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7
 # otherwise, it falls back to the value in PROXY_BACKEND_HOST_URL_MAP
 PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
 PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
-# Configuration for the servcie to connect to it's database
+# enable shard routing for hosts defined in PROXY_SHARD_BACKEND_HOST_URL_MAP
+PROXY_SHARDED_ROUTING_ENABLED=true
+PROXY_SHARD_BACKEND_HOST_URL_MAP=localhost:7777>10|http://kava-shard-10:8545|20|http://kava-shard-20:8545
+
+# Configuration for the service to connect to it's database
 DATABASE_NAME=postgres
 DATABASE_ENDPOINT_URL=postgres:5432
 DATABASE_USERNAME=postgres
