add decodeRequestMiddleware & batch request decoding

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
 
   # run redis for proxy service to cache responses
   redis:
-    image: 'bitnami/redis:latest'
+    image: bitnami/redis:latest
     env_file: .env
     ports:
       - "${REDIS_HOST_PORT}:${REDIS_CONTAINER_PORT}"
