--- a/.env
+++ b/.env
@@ -38,7 +38,7 @@ TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_PRUNING_URL=http://localhost:7778
 TEST_PROXY_BACKEND_EVM_RPC_HOST_URL=http://localhost:8545
 TEST_DATABASE_ENDPOINT_URL=localhost:5432
-TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+TEST_PROXY_BACKEND_HOST_URL_MAP=localhost:7774>http://kava-pruning:1317,localhost:7775>http://kava-pruning:26657,localhost:7776>http://kava-pruning:9090,localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
 TEST_PROXY_HEIGHT_BASED_ROUTING_ENABLED=true
 TEST_PROXY_PRUNING_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-pruning:8545,localhost:7778>http://kava-pruning:8545
 # What level of logging to use for service objects constructed during
@@ -59,7 +59,7 @@ LOG_LEVEL=TRACE
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
-PROXY_BACKEND_HOST_URL_MAP=localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
+PROXY_BACKEND_HOST_URL_MAP=localhost:7774>http://kava-validator:1317,localhost:7775>http://kava-validator:26657,localhost:7776>http://kava-validator:9090,localhost:7777>http://kava-validator:8545,localhost:7778>http://kava-pruning:8545
 # height-based routing will look at the height of an incoming EVM request
 # iff. the height is "latest", it routes to the corresponding PROXY_PRUNING_BACKEND_HOST_URL_MAP value
 # otherwise, it falls back to the value in PROXY_BACKEND_HOST_URL_MAP
@@ -82,7 +82,7 @@ DATABASE_CONNECTION_MAX_IDLE_SECONDS=5
 DATABASE_MAX_OPEN_CONNECTIONS=20
 # controls whether the service will attempt to run migrations when it starts
 RUN_DATABASE_MIGRATIONS=true
-DATABASE_QUERY_LOGGING_ENABLED=true
+DATABASE_QUERY_LOGGING_ENABLED=false
 # How often the metric compaction routine will run
 # defaults to 3600 / 1 hour if not set
 METRIC_COMPACTION_ROUTINE_INTERVAL_SECONDS=5
@@ -106,7 +106,7 @@ METRIC_PARTITIONINING_PREFILL_PERIOD_DAYS=7
 # Used by `ready` script to ensure metric partitions have been created.
 MINIMUM_REQUIRED_PARTITIONS=30
 # Whether metric pruning routines should run on the configured interval, defaults to true
-METRIC_PRUNING_ENABLED=true
+METRIC_PRUNING_ENABLED=false
 # How frequenlty metric pruning routines should run
 # defaults to 1 day
 METRIC_PRUNING_ROUTINE_INTERVAL_SECONDS=10
