--- a/.env
+++ b/.env
@@ -33,6 +33,8 @@ PROXY_CONTAINER_DEBUG_PORT=2345
 PROXY_HOST_DEBUG_PORT=2345
 
 ##### E2E Testing Config
+TEST_UNCONFIGURED_PROXY_PORT=7779
+TEST_UNCONFIGURED_PROXY_URL=http://localhost:7779
 TEST_PROXY_SERVICE_EVM_RPC_URL=http://localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_HOSTNAME=localhost:7777
 TEST_PROXY_SERVICE_EVM_RPC_PRUNING_URL=http://localhost:7778
@@ -56,7 +58,7 @@ TEST_REDIS_ENDPOINT_URL=localhost:6379
 ##### Kava Proxy Config
 # What port the proxy service listens on
 PROXY_SERVICE_PORT=7777
-LOG_LEVEL=TRACE
+LOG_LEVEL=DEBUG
 HTTP_READ_TIMEOUT_SECONDS=30
 HTTP_WRITE_TIMEOUT_SECONDS=60
 # Address of the origin server to proxy all requests to
